--- a/endnote.bib
+++ b/endnote.bib
@@ -948,25 +948,6 @@ Publisher: American Psychological Association},
 }
 
 
-@article{enock_self_2018,
-	title = {Self and team prioritisation effects in perceptual matching: Evidence for a shared representation},
-	volume = {182},
-	issn = {0001-6918},
-	url = {http://www.sciencedirect.com/science/article/pii/S0001691817301518},
-	doi = {10.1016/j.actpsy.2017.11.011},
-	shorttitle = {Self and team prioritisation effects in perceptual matching},
-	abstract = {Previous research has demonstrated that in-group favouritism occurs not only in higher-level judgments such as reward allocation, but also in low-level perceptual and attentional tasks. Recently, Moradi, Sui, Hewstone, and Humphreys (2015) found a novel effect of in-group bias on a simple perceptual matching task in which football fans responded more efficiently to stimuli newly associated with their own football team than stimuli associated with rival or neutral teams. This result is consistent with a robust self-bias effect in which individuals show a large performance advantage in responding to stimuli associated with the self over stimuli associated with a close friend or a stranger (Sui, He, \& Humphreys, 2012). The present research utilised a perceptual matching paradigm to investigate the relations between self and in-group prioritisation amongst a sample of college rowers. Across two experiments, we demonstrated a reliable performance advantage for self and team stimuli. We also found a relationship between the self and team advantage in {RT}, and demonstrated an overlap in the perception of self- and team-associated shapes that was stronger in participants who reported a greater sense of group identity with their team. Further, we found no relation between the team bias and positive valence implicitly associated with the team, showing that the team bias effects are unlikely to be driven by emotional significance. The results are consistent with an overlap between self and in-group representation, which may provide evidence for a common process driving both self and in-group perceptual advantage effects.},
-	pages = {107--118},
-	journaltitle = {Acta Psychologica},
-	shortjournal = {Acta Psychologica},
-	author = {Enock, Florence and Sui, Jie and Hewstone, Miles and Humphreys, Glyn W.},
-	urldate = {2020-10-19},
-	date = {2018-01-01},
-	langid = {english},
-	keywords = {In-group prioritisation, Self representation, Self-bias, Social attention, Social identity}
-}
-
-
 @article{enock_overlap_2020,
 	title = {Overlap in processing advantages for minimal ingroups and the self},
 	volume = {10},
@@ -1280,15 +1261,50 @@ Publisher: American Psychological Association},
 	file = {Dang et al. - 2020 - Why Are Self-Report and Behavioral Measures Weakly.pdf:/home/hcp4715/Zotero/storage/W45PPDRD/Dang et al. - 2020 - Why Are Self-Report and Behavioral Measures Weakly.pdf:application/pdf}
 }
 
-
-@article{jones_which_2020,
-	title = {To Which World Regions Does the Valence-Dominance Model of Social Perception Apply?},
-	url = {https://osf.io/n26dy},
-	doi = {10.31234/osf.io/n26dy},
-	abstract = {Over the last ten years, Oosterhof and Todorov’s valence-dominance model has emerged as the most prominent account of how people evaluate faces on social dimensions. In this model, two dimensions (valence and dominance) underpin social judgments of faces. Because this model has primarily been developed and tested in Western regions, it is unclear whether these findings apply to other regions. We addressed this question by replicating Oosterhof and Todorov’s methodology across 11 world regions, 41 countries, and 11,570 participants. When we used Oosterhof and Todorov’s original analysis strategy, the valence-dominance model generalized across regions. When we used an alternative methodology to allow for correlated dimensions we observed much less generalization. Collectively, these results suggest that, while the valence-dominance model generalizes very well across regions when dimensions are forced to be orthogonal, regional differences are revealed when we use different extraction methods, correlate and rotate the dimension reduction solution.},
+@article{jones_which_2021,
+	title = {To which world regions does the valence–dominance model of social perception apply?},
+	rights = {2021 The Author(s), under exclusive licence to Springer Nature Limited},
+	issn = {2397-3374},
+	url = {https://www.nature.com/articles/s41562-020-01007-2},
+	doi = {10.1038/s41562-020-01007-2},
+	abstract = {Over the past 10 years, Oosterhof and Todorov’s valence–dominance model has emerged as the most prominent account of how people evaluate faces on social dimensions. In this model, two dimensions (valence and dominance) underpin social judgements of faces. Because this model has primarily been developed and tested in Western regions, it is unclear whether these findings apply to other regions. We addressed this question by replicating Oosterhof and Todorov’s methodology across 11 world regions, 41 countries and 11,570 participants. When we used Oosterhof and Todorov’s original analysis strategy, the valence–dominance model generalized across regions. When we used an alternative methodology to allow for correlated dimensions, we observed much less generalization. Collectively, these results suggest that, while the valence–dominance model generalizes very well across regions when dimensions are forced to be orthogonal, regional differences are revealed when we use different extraction methods and correlate and rotate the dimension reduction solution.},
+	pages = {1--9},
 	journaltitle = {Nature Human Behaviour},
-	author = {Jones, Benedict C and {DeBruine}, Lisa Marie and Flake, Jessica Kay and Liuzza, Marco Tullio and Antfolk, Jan and Arinze, Nwadiogo Chisom and Ndukaihe, Izuchukwu Lawrence Gabriel and Bloxsom, Nicholas and Lewis, Savannah and Foroni, Francesco and Willis, Megan and Cubillas, Carmelo P. and Vadillo, Miguel A. and gilead, michael and Simchon, Almog and Saribay, Selahattin Adil and Owsley, Nicholas Calbraith and Calvillo, Dustin P and Włodarczyk, Anna and Qi, Yue and Ariyabuddhiphongs, Kris and Jarukasemthawee, Somboon and Manley, Harry and Suavansri, Panita and Taephant, Nattasuda and Stolier, Ryan Mayer and Evans, Thomas Rhys and Bonick, Judson and Lindemans, Jan Willem and Ashworth, Logan Fox and Chevallier, Coralie and Kapucu, Aycan and Karaaslan, Aslan and Leongómez, Juan David and Sánchez, Oscar R. and Valderrama Escallón, Eugenio and Vásquez-Amézquita, Milena and Aczel, Balazs and Hajdu, Nandor and Szecsi, Peter and Andreychik, Michael and Musser, Erica D. and Batres, Carlota and Hu, Chuan-Peng and Liu, Qing-Lan and Legate, Nicole and Vaughn, Leigh Ann and Barzykowski, Krystian and Golik, Karolina and Schmid, Irina and Stieger, Stefan and Artner, Richard and Mues, Chiel Kris Karel and vanpaemel, wolf and Jiang, Zhongqing and Wu, Qi and Marcu, Gabriela and Stephen, Ian and Lu, Jackson G. and Philipp, Michael Carl and Arnal, Jack Dennis and Hehman, Eric and Xie, Sally Y and Chopik, William J. and Seehuus, Martin and Azouaghe, Soufian and Belhaj, Abdelkarim and Elouafa, Jamal and Wilson, John Paul and Kruse, Elliott Tyler and Papadatou-Pastou, Marietta and Barba-Sanchez, Alan and De La Rosa Gomez, Anabel and González-Santoyo, Isaac and Hsu, Tsuyueh and Kung, Chun-Chia and Hsiao-Hsin, Wang and Freeman, Jonathan B. and Oh, {DongWon} and Schei, Vidar and Sverdrup, Therese E and Levitan, Carmel and Cook, Corey L. and Chandel, Priyanka and Kujur, Pratibha and Parganiha, Arti and Parveen, Noorshama and Pati, Atanu Kumar and Pradhan, Sraddha and Singh, Margaret Messiah and Pande, Babita and Bavolar, Jozef and Kačmár, Pavol and Zakharov, Ilya and Solas, Sara Álvarez and Baskin, Ernest and Thirkettle, Martin and Schmidt, Kathleen and Christopherson, Cody D and Suchow, Jordan W and Olofsson, Jonas and Lee, Ai-Suan and Beaudry, Jennifer L and Gogan, Taylor Diarmuid and Oldmeadow, Julian and Dixson, Barnaby and Stevens, Laura and Ribeiro, Gianni and Brandt, Mark John and Hoyer, Karlijn and Jaeger, Bastian and Ren, Dongning and Sleegers, Willem and Wissink, Joeri and Kaminski, Gwenael and Floerke, Victoria A. and Urry, Heather L. and Chen, Sau-Chin and Pfuhl, Gerit and Vally, Zahir and Basnight-Brown, Dana and {IJzerman}, Hans and Sarda, Elisa and Badidi, Touhami and Van der Linden, Nicolas and Tan, Chrystalle B. Y. and Kovic, Vanja and Colloff, Melissa Fay and Flowe, Heather D and Burin, Di and Gardiner, Gwendolyn and Protzko, John and Schild, Christoph and Scigala, Karolina and Zettler, Ingo and O'Mara Kunz, Erin Marie and Storage, Daniel and Wagemans, Fieke Maria Antoinet and Saunders, Blair and Sirota, Miroslav and Sloane, Guyan and Lima, Tiago Jessé Souza and Uittenhove, Kim and Vergauwe, Evie and Jaworska, Katarzyna and Carvalho, Lilian and Ask, Karl and Van Zyl, Casper and Körner, Anita and Weissgerber, Sophia Christin and Boudesseul, Jordane and Ruiz-Dodobara, Fernando and Ritchie, Kay L. and Michalak, Nicholas Michael and Blake, Khandis and White, David and Gordon-Finlayson, Alasdair R and Anne, Michele and Janssen, Steve M. J. and Lee, Kean Mun and Nielsen, Tonje Kvande and Tamnes, Christian K. and Zickfeld, Janis and Dalla Rosa, Anna and Kocsor, Ferenc and Kozma, Luca and Putz, Adam and Tressoldi, Patrizio and Vianello, Michelangelo and Irrazabal, Natalia and Chatard, Armand and Lins, Samuel and Pinto, Isabel R. and Lutz, Johannes and Adamkovic, Matus and Babinčák, Peter and Baník, Gabriel and Ropovik, Ivan and Coetzee, Vinet and Peters, Kim Olivia and Steffens, Niklas K and Tan, Kokwei and Wei, Tan Kok and Thorstenson, Christopher A and Fernandez, Ana Maria and Hsu, Rafael M.C.S. and Valentova, Jaroslava Varella and Varella, Marco Antonio Correa and Corral-Frías, Nadia Saraí and Frias-Armenta, Martha and Hatami, Javad and Monajem, Arash and Sharifian, {MohammadHasan} and Frohlich, Brooke and Lin, Hause and Inzlicht, Michael and Lamm, Claus and Pronizius, Ekaterina and Voracek, Martin and Olsen, Jerome and Mac Giolla, Erik and Akgoz, Aysegul and Özdoğru, Asil Ali and Crawford, Matthew T and Bennett-Day, Brooke and Koehn, Monica A and Okan, Ceylan and Ansari, Daniel and Gill, Tripat and Miller, Jeremy K. and Dunham, Yarrow and Yang, Xin and Alper, Sinan and Alaei, Ravin and Lucia, Martha and Cai, Sun Jun and Danvers, Alexander Francois and Dranseika, Vilius and Gilboa-Schechtman, Eva and Hahn, Amanda C and Jang, Chaning and Marshall, Tara and {McCarthy}, Randy J. and Muñoz-Reyes, José Antonio and Muñoz-reyes, Ja and Neyroud, Lison and Polo, Pablo and Rule, Nicholas and Shiramizu, Victor Kenji Medeiros and Tiantian, Dong and Turiegano, Enrique and Yan, Wen-Jing and Balas, Benjamin and Ferreira, Paulo {RS} and Junger, Julia and Mburu, Georgina W and Sampaio, Waldir M. and Santos, Diana R and Gulgoz, Sami and Stern, Julia and Forscher, Patrick S. and Chartier, Christopher R. and Coles, Nicholas Alvaro},
-	urldate = {2020-07-11},
-	date = {2020},
-	file = {Jones et al. - 2018 - To Which World Regions Does the Valence-Dominance .pdf:/home/hcp4715/Zotero/storage/DSDMB5U7/Jones et al. - 2018 - To Which World Regions Does the Valence-Dominance .pdf:application/pdf}
+	author = {Jones, Benedict C. and {DeBruine}, Lisa M. and Flake, Jessica K. and Liuzza, Marco Tullio and Antfolk, Jan and Arinze, Nwadiogo C. and Ndukaihe, Izuchukwu L. G. and Bloxsom, Nicholas G. and Lewis, Savannah C. and Foroni, Francesco and Willis, Megan L. and Cubillas, Carmelo P. and Vadillo, Miguel A. and Turiegano, Enrique and Gilead, Michael and Simchon, Almog and Saribay, S. Adil and Owsley, Nicholas C. and Jang, Chaning and Mburu, Georgina and Calvillo, Dustin P. and Wlodarczyk, Anna and Qi, Yue and Ariyabuddhiphongs, Kris and Jarukasemthawee, Somboon and Manley, Harry and Suavansri, Panita and Taephant, Nattasuda and Stolier, Ryan M. and Evans, Thomas R. and Bonick, Judson and Lindemans, Jan W. and Ashworth, Logan F. and Hahn, Amanda C. and Chevallier, Coralie and Kapucu, Aycan and Karaaslan, Aslan and Leongómez, Juan David and Sánchez, Oscar R. and Valderrama, Eugenio and Vásquez-Amézquita, Milena and Hajdu, Nandor and Aczel, Balazs and Szecsi, Peter and Andreychik, Michael and Musser, Erica D. and Batres, Carlota and Hu, Chuan-Peng and Liu, Qing-Lan and Legate, Nicole and Vaughn, Leigh Ann and Barzykowski, Krystian and Golik, Karolina and Schmid, Irina and Stieger, Stefan and Artner, Richard and Mues, Chiel and Vanpaemel, Wolf and Jiang, Zhongqing and Wu, Qi and Marcu, Gabriela M. and Stephen, Ian D. and Lu, Jackson G. and Philipp, Michael C. and Arnal, Jack D. and Hehman, Eric and Xie, Sally Y. and Chopik, William J. and Seehuus, Martin and Azouaghe, Soufian and Belhaj, Abdelkarim and Elouafa, Jamal and Wilson, John P. and Kruse, Elliott and Papadatou-Pastou, Marietta and De La Rosa-Gómez, Anabel and Barba-Sánchez, Alan E. and González-Santoyo, Isaac and Hsu, Tsuyueh and Kung, Chun-Chia and Wang, Hsiao-Hsin and Freeman, Jonathan B. and Oh, Dong Won and Schei, Vidar and Sverdrup, Therese E. and Levitan, Carmel A. and Cook, Corey L. and Chandel, Priyanka and Kujur, Pratibha and Parganiha, Arti and Parveen, Noorshama and Pati, Atanu Kumar and Pradhan, Sraddha and Singh, Margaret M. and Pande, Babita and Bavolar, Jozef and Kačmár, Pavol and Zakharov, Ilya and Álvarez-Solas, Sara and Baskin, Ernest and Thirkettle, Martin and Schmidt, Kathleen and Christopherson, Cody D. and Leonis, Trinity and Suchow, Jordan W. and Olofsson, Jonas K. and Jernsäther, Teodor and Lee, Ai-Suan and Beaudry, Jennifer L. and Gogan, Taylor D. and Oldmeadow, Julian A. and Balas, Benjamin and Stevens, Laura M. and Colloff, Melissa F. and Flowe, Heather D. and Gülgöz, Sami and Brandt, Mark J. and Hoyer, Karlijn and Jaeger, Bastian and Ren, Dongning and Sleegers, Willem W. A. and Wissink, Joeri and Kaminski, Gwenaël and Floerke, Victoria A. and Urry, Heather L. and Chen, Sau-Chin and Pfuhl, Gerit and Vally, Zahir and Basnight-Brown, Dana M. and Jzerman, Hans I. and Sarda, Elisa and Neyroud, Lison and Badidi, Touhami and Van der Linden, Nicolas and Tan, Chrystalle B. Y. and Kovic, Vanja and Sampaio, Waldir and Ferreira, Paulo and Santos, Diana and Burin, Debora I. and Gardiner, Gwendolyn and Protzko, John and Schild, Christoph and Ścigała, Karolina A. and Zettler, Ingo and O’Mara Kunz, Erin M. and Storage, Daniel and Wagemans, Fieke M. A. and Saunders, Blair and Sirota, Miroslav and Sloane, Guyan V. and Lima, Tiago J. S. and Uittenhove, Kim and Vergauwe, Evie and Jaworska, Katarzyna and Stern, Julia and Ask, Karl and van Zyl, Casper J. J. and Körner, Anita and Weissgerber, Sophia C. and Boudesseul, Jordane and Ruiz-Dodobara, Fernando and Ritchie, Kay L. and Michalak, Nicholas M. and Blake, Khandis R. and White, David and Gordon-Finlayson, Alasdair R. and Anne, Michele and Janssen, Steve M. J. and Lee, Kean Mun and Nielsen, Tonje K. and Tamnes, Christian K. and Zickfeld, Janis H. and Rosa, Anna Dalla and Vianello, Michelangelo and Kocsor, Ferenc and Kozma, Luca and Putz, Ádám and Tressoldi, Patrizio and Irrazabal, Natalia and Chatard, Armand and Lins, Samuel and Pinto, Isabel R. and Lutz, Johannes and Adamkovic, Matus and Babincak, Peter and Baník, Gabriel and Ropovik, Ivan and Coetzee, Vinet and Dixson, Barnaby J. W. and Ribeiro, Gianni and Peters, Kim and Steffens, Niklas K. and Tan, Kok Wei and Thorstenson, Christopher A. and Fernandez, Ana Maria and Hsu, Rafael M. C. S. and Valentova, Jaroslava V. and Varella, Marco A. C. and Corral-Frías, Nadia S. and Frías-Armenta, Martha and Hatami, Javad and Monajem, Arash and Sharifian, {MohammadHasan} and Frohlich, Brooke and Lin, Hause and Inzlicht, Michael and Alaei, Ravin and Rule, Nicholas O. and Lamm, Claus and Pronizius, Ekaterina and Voracek, Martin and Olsen, Jerome and Giolla, Erik Mac and Akgoz, Aysegul and Özdoğru, Asil A. and Crawford, Matthew T. and Bennett-Day, Brooke and Koehn, Monica A. and Okan, Ceylan and Gill, Tripat and Miller, Jeremy K. and Dunham, Yarrow and Yang, Xin and Alper, Sinan and Borras-Guevara, Martha Lucia and Cai, Sun Jun and Tiantian, Dong and Danvers, Alexander F. and Feinberg, David R. and Armstrong, Marie M. and Gilboa-Schechtman, Eva and {McCarthy}, Randy J. and Muñoz-Reyes, Jose Antonio and Polo, Pablo and Shiramazu, Victor K. M. and Yan, Wen-Jing and Carvalho, Lilian and Forscher, Patrick S. and Chartier, Christopher R. and Coles, Nicholas A.},
+	urldate = {2021-01-06},
+	date = {2021-01-04},
+	langid = {english},
+	note = {Publisher: Nature Publishing Group}
+}
+
+
+@article{bagnis_toward_2019,
+	title = {Toward an integrative science of social vision in intergroup bias},
+	volume = {102},
+	issn = {0149-7634},
+	doi = {https://doi.org/10.1016/j.neubiorev.2019.04.020},
+	abstract = {Social neuroscience is unveiling how the brain coordinates the construal of social categories and the generation of intergroup biases from facial perception. Recent evidence indicates that social categorization is more sensitive and malleable to elemental facial features than previously assumed. At the same time, perception of social categories can be crafted by top-down factors, including prior knowledge, motivations, and social expectations. In this review, we summarize extant wisdom and propose a model that goes beyond traditional accounts that have conceived stereotypes and prejudices as the end result of “reading out” social categories in the face, and have assumed a hierarchical brain organization. Our model proposes recursive and dynamic interactions amid distant brain regions. Accordingly, the reciprocal exchange of sensory evidence and predictions biases and “explains away” visual input in face perception regions until a compromise is achieved and social perception stabilizes. Ideally, this effort would contribute to shape a research field at the interface between neural and social sciences, which is often referred to as social vision.},
+	pages = {318--326},
+	journaltitle = {Neuroscience \& Biobehavioral Reviews},
+	author = {Bagnis, Arianna and Celeghin, Alessia and Mosso, Cristina Onesta and Tamietto, Marco},
+	date = {2019-07-01},
+	keywords = {Emotion, Stereotypes, Intergroup bias, Predictive coding, Face perception, Social vision, Biased competition, Prejudices}
+}
+
+
+@article{baumeister_bad_2001,
+	title = {Bad is Stronger than Good},
+	volume = {5},
+	issn = {1089-2680},
+	url = {https://doi.org/10.1037/1089-2680.5.4.323},
+	doi = {10.1037/1089-2680.5.4.323},
+	abstract = {The greater power of bad events over good ones is found in everyday events, major life events (e.g., trauma), close relationship outcomes, social network patterns, interpersonal interactions, and learning processes. Bad emotions, bad parents, and bad feedback have more impact than good ones, and bad information is processed more thoroughly than good. The self is more motivated to avoid bad self-definitions than to pursue good ones. Bad impressions and bad stereotypes are quicker to form and more resistant to disconfirmation than good ones. Various explanations such as diagnosticity and salience help explain some findings, but the greater power of bad events is still found when such variables are controlled. Hardly any exceptions (indicating greater power of good) can be found. Taken together, these findings suggest that bad is stronger than good, as a general principle across a broad range of psychological phenomena.},
+	pages = {323--370},
+	number = {4},
+	journaltitle = {Review of General Psychology},
+	shortjournal = {Review of General Psychology},
+	author = {Baumeister, Roy F. and Bratslavsky, Ellen and Finkenauer, Catrin and Vohs, Kathleen D.},
+	urldate = {2021-01-31},
+	date = {2001-12-01},
+	langid = {english}
 }
